# FrictionSegNet

./: .env.example  .gitignore  README.md  config.yaml  config.yml  main.py  pyproject.toml  test_prior.py
frictionsegnet/: Train.py
frictionsegnet/dataloader/: CityscapesLoader.py  GenericDataLoader.py  RSCDDataLoader.py  __init__.py  volvoDataLoader_onFly.py
frictionsegnet/model/: ProUNet.py  UNetBlocks.py
frictionsegnet/utils/jn/: GED.ipynb  HVAEInferenceOnVolvo.ipynb  IEEE challenging example.ipynb  MSE per class.ipynb  error_visual.ipynb  heatMap-paper.ipynb  heatMap.ipynb  model summary.ipynb  reliabilityDiagram.ipynb  visualize_for_paper2.ipynb  visualize_latent-PCA.ipynb
probabilistic_unet/: Train copy.py  Train.py  train.py  train_lightning.py
probabilistic_unet/dataloader/: CityscapesLoader.py  GenericDataLoader.py  RSCD_dataloader.py  __init__.py  base_segmentation_dataset.py  cityscapes_loader.py  generic_dataloader.py  lightning_dataloader.py  mapillary_intended_objs.py  volvoDataLoader_onFly.py
probabilistic_unet/model/: Prior.py  ProUNet.py  objective_function.py  posterior.py  prior.py  pro_unet.py  residual_block.py  unet_blocks.py
probabilistic_unet/utils/: __init__.py  logger.py
probabilistic_unet/utils/config_loader/: __init__.py  config_class.py  config_dataclass.py  config_manager.py
probabilistic_unet/utils/confusion_matrix/: confusion_matrix.py
probabilistic_unet/utils/geco/: geco.py
probabilistic_unet/utils/jn/: cuda device.ipynb  error_simulaition.ipynb  heatMap-TestSet.ipynb  visualize_latent-3d.ipynb  visualize_latent.ipynb  (+1 more)
(+13 files in other folders)
