[project]
name = "frictionsegnet"
version = "0.1.0"
description = ""
authors = [
    {name = "wsmo6",email = "m.otoofi@lboro.ac.uk"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch (>=2.5.1,<3.0.0)",
    "torchvision (>=0.20.1,<0.21.0)",
    "torchaudio (>=2.5.1,<3.0.0)",
    "cityscapesscripts (>=2.2.4,<3.0.0)",
    "numpy (==1.24.3)",
    "pillow (==9.4)",
    "pyyaml (>=6.0.2,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
