[project]
name = "frictionsegnet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cityscapesscripts>=2.2.4",
    "torch",
    "torchcrf>=1.1.0",
    "torchmetrics>=1.8.2",
    "torchvision",
    "pytorch-lightning>=2.0.0",
    "loguru>=0.7.0",
    "wandb>=0.15.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "rich>=13.0.0",
    "lightning>=2.5.6",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
]
